--- a/templates/store.html
+++ b/templates/store.html
@@ -18,6 +18,7 @@
             </div>
         </div>
     </section>
+    <a class="primary_btn yellow_btn text-white" href="/add_book">Add Book</a>
     <!--================ End Home Banner Area =================-->
 	
 	<!--================ Start Causes Area =================-->
@@ -46,8 +47,11 @@
                                         
                                     </div>
                                     <div class="d-flex justify-content-between donation align-items-center" style="left: 50%; position: absolute; transform: translateX(-50%);">
-                                        <a href="/store" class="primary_btn">Add to Cart</a>
-                                        <br/>
+                                        <div style="padding: 5px">
+                                            <a href="/cart" class="primary_btn">Add</a>
+                                        </div>
+
+                                        
                                         {% if session['admin'] %}
                                         <a href="/delete/{{book.Book_id}}" class="primary_btn">Delete</a>
                                         {% endif %}
