--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,55 +19,43 @@
     
     <!--================Contact Area =================-->
     <section class="contact_area section_gap">
-        <div class="container">
-<<<<<<< HEAD
-=======
+        <div class="container">                
+                    <div class="contact_info" style="width: 500px">
 
->>>>>>> 1939ea5fb8859066ea6d5c4efb8800dc2aadf0c4
-            <div class="row">
-                <div class="col-lg-3">
-                    <div class="contact_info">
-                        <div class="info_item">
-                            <i class="lnr lnr-home"></i>
-                            <h6>California, United States</h6>
-                            <p>Santa monica bullevard</p>
-                        </div>
-                        <div class="info_item">
+                        <div class="info_item" style="padding-bottom: 40px">
                             <i class="lnr lnr-phone-handset"></i>
-                            <h6><a href="#">00 (440) 9865 562</a></h6>
-                            <p>Mon to Fri 9am to 6 pm</p>
+                            <h6><a href="#">03-5341400</a></h6>
+                            <p>From Sunday to Thursday 8:30 to 16:30 </p>
                         </div>
-                        <div class="info_item">
+                        <div class="info_item" style="padding-bottom: 60px">
                             <i class="lnr lnr-envelope"></i>
-                            <h6><a href="#">support@colorlib.com</a></h6>
-                            <p>Send us your query anytime!</p>
+                            <h6><a href="#"> rebooks@s-tov.org.il</a></h6>
+                            <p>Send us your question anytime!</p>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-9">
-                    <form class="row contact_form" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
+               
+               
+                    <form class="row contact_form" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate" >
                         <div class="col-md-6">
                             <div class="form-group">
-                                <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name">
+                                <input type="text" class="form-control" id="name" name="name" placeholder=" Name">
                             </div>
                             <div class="form-group">
-                                <input type="email" class="form-control" id="email" name="email" placeholder="Enter email address">
+                                <input type="email" class="form-control" id="email" name="email" placeholder="Email address">
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" id="subject" name="subject" placeholder="Enter Subject">
+                                <input type="text" class="form-control" id="subject" name="subject" placeholder=" Subject">
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="form-group">
-                                <textarea class="form-control" name="message" id="message" rows="1" placeholder="Enter Message"></textarea>
+                            <div class="form-group" >
+                                <textarea class="form-control" name="message" id="message" rows="1" placeholder=" Message"></textarea>
                             </div>
                         </div>
                         <div class="col-md-12 text-right">
                             <button type="submit" value="submit" class="btn primary_btn">Send Message</button>
                         </div>
                     </form>
-                </div>
-            </div>
         </div>
     </section>
 
@@ -76,17 +64,7 @@
 
 	
     <!--================ End Subscribe Area =================-->
-<footer>
-    <div style="background-color: #009933">
-        <p>
-        <font color="white">
-             <b><h3 > Social Media </h3></b>
-        </font>
-        </p>
-        
-    </div>    
-</footer>        
-    
+
     <!--================Contact Success and Error message Area =================-->
     <div id="success" class="modal modal-message fade" role="dialog">
         <div class="modal-dialog">
@@ -107,21 +85,23 @@
         <div class="footer-area">
             <div class="container">
                 <div class="row section_gap">
-                    <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="single-footer-widget tp_widgets">
-                            <h4 class="footer_title large_title">Social Media</h4>
-                            <div class="ml-40">
-                                <p class="sm-head">
+                            <h4 class="footer_title large_title" >Social Media</h4>
+                            <div class="ml-40" style="width: 500px">
+                                <font size="5px">
+                                    
+                               
+                                <p class="sm-head" >
                                     <span>
-                                        <img src="static/img/insta.png" style="width: 30px">
+                                        <img src="static/img/insta.png" style="width: 25px">
                                     </span>
                                     Instagram
                                 </p >
-                                <p>
+                                <p style="padding-bottom: 40px">
                                 <a href="https://www.instagram.com/rebooks_israel/">
                                 <font color="gray">
                                  @rebooks_israel
-                                 </font>
+                            
                                 </a>
 
                             
@@ -131,11 +111,11 @@
     
                                 <p class="sm-head">
                                    <span>
-                                        <img src="static/img/facebook.png" style="width: 30px">
+                                        <img src="static/img/facebook.png" style="width: 25px">
                                     </span>
                                     Facebook
                                 </p>
-                                <p>
+                                <p style="padding-bottom: 40px"s>
                                   <a href="https://www.facebook.com/%D7%A1%D7%99%D7%A4%D7%95%D7%A8-%D7%97%D7%95%D7%96%D7%A8-173464269341/?ref=nf&hc_ref=ARS9dcuvNX_haHNld2duIGRELOrz_-eO2KITI_JndhBR6V0xzDn_BFhQ3tTJnDvORbg&__xts__[0]=68.ARDcP7aicjN90HCx6Ty6r4QknUSjSm6ujF5XvUBi44mzfDfFfK6vghdDqMYYGJ4kQXb5Mpfuj_oNAeYOpfJ9Oy8ipVQ_9Ie8vJSxKFlePek9BX-vnA0h2cpkg7ClS20ohXjmKYuWL8Abv0NluzXZY9lVxNfG_7s1sAQpeqeQD1gJSUJFEbN9YTYoRN3AX8y5zkLQz6cm7oOUW0lbXyi_tPDqixVK3UMW0RoZfmQ6khU8MOHf6b9z9DJ7FuiA-KV-ZQl_h56Gc4SMBvqY_e8pGDpVdF0Pb_1HQj7GEzXxqsjTk8ZQXXhrJ2gAoxXcZc4EjS3ybeod0ofN1gs&__tn__=%3C-R"> 
                                    <font color="gray">
                                    Rebooks</a>
@@ -159,49 +139,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-md-6 col-sm-6">
-                        <div class="single-footer-widget instafeed">
-                            <h4 class="footer_title">Gallery</h6>
-                            <ul class="list instafeed d-flex flex-wrap">
-                                <li><img src="img/gallery/g1.jpg" alt=""></li>
-                                <li><img src="img/gallery/g2.jpg" alt=""></li>
-                                <li><img src="img/gallery/g3.jpg" alt=""></li>
-                                <li><img src="img/gallery/g4.jpg" alt=""></li>
-                                <li><img src="img/gallery/g5.jpg" alt=""></li>
-                                <li><img src="img/gallery/g6.jpg" alt=""></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="offset-lg-1 col-lg-3 col-md-6 col-sm-6">
-                        <div class="single-footer-widget tp_widgets">
-                            <h4 class="footer_title">Contact Us</h4>
-                            <div class="ml-40">
-                                <p class="sm-head">
-                                    <span class="fa fa-location-arrow"></span>
-                                    Head Office
-                                </p>
-                                <p>123, Main Street, Your City</p>
-    
-                                <p class="sm-head">
-                                    <span class="fa fa-phone"></span>
-                                    Phone Number
-                                </p>
-                                <p>
-                                    +123 456 7890 <br>
-                                    +123 456 7890
-                                </p>
-    
-                                <p class="sm-head">
-                                    <span class="fa fa-envelope"></span>
-                                    Email
-                                </p>
-                                <p>
-                                    free@infoexample.com <br>
-                                    www.infoexample.com
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
         </div>
