--- a/templates/layout.html
+++ b/templates/layout.html
@@ -42,7 +42,7 @@
                                 <li class="nav-item"><a class="nav-link" href="/about">About</a></li> 
                                 <li class="nav-item"><a class="nav-link" href="/store">Store</a></li>
                                 <li class="nav-item"><a class="nav-link" href="/staff">Staff</a></li>
-                                <li class="nav-item"><a class="nav-link" href="/donate">Donate</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/donate">Stores</a></li>
                                 <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
                             </ul>
                         </div> 
