--- a/templates/staff.html
+++ b/templates/staff.html
@@ -145,6 +145,66 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-lg-6">
+                    <div class="single_event">
+                        <div class="row align-items-center">
+                            <div class="col-lg-6 col-md-6">
+                                <figure>
+                                    <img class="img-fluid w-100" src="img/event/e3.jpg" alt="">
+                                    <div class="img-overlay"></div>
+                                </figure>
+                            </div>
+                            <div class="col-lg-6 col-md-6">
+                                <div class="content_wrapper">
+                                    <h3 class="title">
+                                     Name Last
+                                    </h3>
+                                    <p >
+                                        
+                                        <b>Age:</b>111
+                                        <br>
+                                        <b>Position:</b> doing nothing
+                                        <br>
+                                        <b>About me: </b> i am doing nothing in life, text text text, i like falafel
+                                        
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6">
+                    <div class="single_event">
+                        <div class="row align-items-center">
+                            <div class="col-lg-6 col-md-6">
+                                <figure>
+                                    <img class="img-fluid w-100" src="img/event/e3.jpg" alt="">
+                                    <div class="img-overlay"></div>
+                                </figure>
+                            </div>
+                            <div class="col-lg-6 col-md-6">
+                                <div class="content_wrapper">
+                                    <h3 class="title">
+                                     Name Last
+                                    </h3>
+                                    <p >
+                                        
+                                        <b>Age:</b>111
+                                        <br>
+                                        <b>Position:</b> doing nothing
+                                        <br>
+                                        <b>About me: </b> i am doing nothing in life, text text text, i like falafel
+                                        
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
         </div>
     </section>
