--- a/templates/staff.html
+++ b/templates/staff.html
@@ -33,7 +33,7 @@
                         <div class="row align-items-center">
                             <div class="col-lg-6 col-md-6" st>
                                 <figure>
-                                    <img class="img-fluid w-100" src="img/event/e1.jpg" alt="">
+                                    <img class="img-fluid w-100" src="static/img/staff1.jpeg" alt="">
                                     <div class="img-overlay"></div>
                                 </figure>
                             </div>
@@ -64,7 +64,7 @@
                         <div class="row align-items-center">
                             <div class="col-lg-6 col-md-6">
                                 <figure>
-                                    <img class="img-fluid w-100" src="img/event/e2.jpg" alt="">
+                                    <img class="img-fluid w-100" src="static/img/staff2.jpeg" alt="">
                                     <div class="img-overlay"></div>
                                 </figure>
                             </div>
@@ -93,7 +93,7 @@
                         <div class="row align-items-center">
                             <div class="col-lg-6 col-md-6">
                                 <figure>
-                                    <img class="img-fluid w-100" src="img/event/e3.jpg" alt="">
+                                    <img class="img-fluid w-100" src="static/img/staff3.jpeg" alt="">
                                     <div class="img-overlay"></div>
                                 </figure>
                             </div>
@@ -122,7 +122,7 @@
                         <div class="row align-items-center">
                             <div class="col-lg-6 col-md-6">
                                 <figure>
-                                    <img class="img-fluid w-100" src="img/event/e4.jpg" alt="">
+                                    <img class="img-fluid w-100" src="static/img/staff4.jpeg" alt="">
                                     <div class="img-overlay"></div>
                                 </figure>
                             </div>
