--- a/templates/staff.html
+++ b/templates/staff.html
@@ -40,13 +40,12 @@
                             <div class="col-lg-6 col-md-6">
                                 <div class="content_wrapper">
                                     <h3 class="title">
-                                        Name LastName
+                                        Nataly Payne
                                     </h3>
                                     <p >
                                         
-                                        <b>Age:</b>111
-                                        <br>
-                                        <b>Position:</b> doing nothing
+                                        <b>Age:</b>26                                        <br>
+                                        <b>Position:</b> Designer
                                         <br>
                                         <b>About me: </b> i am doing nothing in life, text text text, i like falafel
                                         
