--- a/templates/staff.html
+++ b/templates/staff.html
@@ -47,7 +47,7 @@
                                         <b>Age:</b>26                                        <br>
                                         <b>Position:</b> Designer
                                         <br>
-                                        <b>About me: </b> i am doing nothing in life, text text text, i like falafel
+                                        <b>About me: </b> I have been working with rebooks for couple of months now and I love it !!
                                         
                                     </p>
                                     
@@ -70,15 +70,15 @@
                             <div class="col-lg-6 col-md-6">
                                 <div class="content_wrapper">
                                     <h3 class="title">
-                                       Name Last
+                                       Bruce Smith
                                     </h3>
                                     <p >
                                         
-                                        <b>Age:</b>111
+                                        <b>Age:</b>26
                                         <br>
-                                        <b>Position:</b> doing nothing
+                                        <b>Position:</b> manager
                                         <br>
-                                        <b>About me: </b> i am doing nothing in life, text text text, i like falafel
+                                        <b>About me: </b> I have been th emanager for over a year and it is going great!!
                                         
                                     </p>
                                 </div>
@@ -99,15 +99,15 @@
                             <div class="col-lg-6 col-md-6">
                                 <div class="content_wrapper">
                                     <h3 class="title">
-                                     Name Last
+                                        Samantha Brown
                                     </h3>
                                     <p >
                                         
-                                        <b>Age:</b>111
+                                        <b>Age:</b>22 
                                         <br>
-                                        <b>Position:</b> doing nothing
+                                        <b>Position:</b> Secretery
                                         <br>
-                                        <b>About me: </b> i am doing nothing in life, text text text, i like falafel
+                                        <b>About me: </b> This job helped me going through so many situations!!
                                         
                                     </p>
                                 </div>
@@ -128,15 +128,15 @@
                             <div class="col-lg-6 col-md-6">
                                 <div class="content_wrapper">
                                     <h3 class="title">
-                                      Name LastName
+                                      Brian May
                                     </h3>
                                     <p >
                                         
-                                        <b>Age:</b>111
+                                        <b>Age:</b>19
                                         <br>
-                                        <b>Position:</b> doing nothing
+                                        <b>Position:</b> Designer
                                         <br>
-                                        <b>About me: </b> i am doing nothing in life, text text text, i like falafel
+                                        <b>About me: </b> I like my job it makes feel that I am important in life!
                                         
                                     </p>
                                 </div>
@@ -157,15 +157,15 @@
                             <div class="col-lg-6 col-md-6">
                                 <div class="content_wrapper">
                                     <h3 class="title">
-                                     Name Last
+                                     Sean Auston
                                     </h3>
                                     <p >
                                         
-                                        <b>Age:</b>111
+                                        <b>Age:</b>29
                                         <br>
-                                        <b>Position:</b> doing nothing
+                                        <b>Position:</b> manager
                                         <br>
-                                        <b>About me: </b> i am doing nothing in life, text text text, i like falafel
+                                        <b>About me: </b> great job!
                                         
                                     </p>
                                 </div>
@@ -186,16 +186,16 @@
                             <div class="col-lg-6 col-md-6">
                                 <div class="content_wrapper">
                                     <h3 class="title">
-                                     Name Last
+                                     Layan Mendens
                                     </h3>
                                     <p >
                                         
-                                        <b>Age:</b>111
+                                        <b>Age:</b>30
                                         <br>
-                                        <b>Position:</b> doing nothing
+                                        <b>Position:</b> worker
                                         <br>
-                                        <b>About me: </b> i am doing nothing in life, text text text, i like falafel
-                                        
+                                        <b>About me: </b> interesting job ! I like working with Rebooks, great company!
+                                         
                                     </p>
                                 </div>
                             </div>
