--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
 					<p>
 						Rebooks is a social bookstore chain that represents a rehabilitation center for people who are dealing with mental disabilities through reusing books.
 					</p>
-					<a class="primary_btn mr-20" href="/donate">Donate Now</a>
+					<a class="primary_btn mr-20" href="/store">Buy Books</a>
 
 
 
